Canceling extraction of password protected archive brings misleading dialogue
A small hiccup in a new (nautilus!682 (merged)) password protected archive functionality in nautilus. When cancelling extraction of encrypted zip (that contains just a single file, doesn't happen with multifile archives) in the password dialogue, nautilus pops "Not enough free space to extract XXXX.zip" warning dialogue, which certainly is not a case. Also "File operations successfully finished" notification appears, this may not be a bug though.
Steps to reproduce
Create a single file archive with nautilus, choose password protected zip. Double click the archive, but instead of giving a password, just hit Cancel.
Affected version
nautilus-40.2 (found on rhel9 beta candidate)