extractor: Return when passphrase prompt was cancelled

Currently, a misleading error appears when the passphrase prompt in Nautilus
is cancelled. This is because the `scanned` signal is emitted regardless the
`cancellable` state. This happens only for archives with one file. Let's
return immediately to prevent this problematic behavior.

Fixes: https://gitlab.gnome.org/GNOME/gnome-autoar/-/issues/35